* Oct 23 2006 Luke Macken <lmacken@redhat.com> - 0.2.6
- Make the instructions less misleading
- Support TYPE_INTERFACE for API_VERSION <= 2.3
- Remove cached mirror list in the clean_hook

* Jun 14 2006 Luke Macken <lmacken@redhat.com> - 0.2.5
- Use new yum 2.9.0 api

* Feb 06 2006 Luke Macken <lmacken@redhat.com> - 0.2.4
- Only write the timedhost file if we've re-pinged the mirrors

* Feb 02 2006 Luke Macken <lmacken@redhat.com> - 0.2.3
- Added 'maxhostfileage' option to specify how many days to keep the hostfile

* Nov 26 2005 Luke Macken <lmacken@redhat.com> - 0.2.2
- Merge Panu's persistent changes to cache timings
- Add 'hostfilepath' as configuration string

* Nov 26 2005 Karanbir Singh <kbsingh@centos.org> - 0.2.1
- Work out the mirror URL type and do something worthwhile with it
- Test for non standard ports, if used.
- file:// url's will always be timed = 0

* Nov 16 2005 Luke Macken <lmacken@redhat.com> - 0.2
- Throttle mirrors before metadata download (thanks to Panu)

* Aug 12 2005 Luke Macken <lmacken@redhat.com> - 0.1
- Initial release