@@ -1,3 +1,6 @@
+* Apr 19 2007 Luke Macken <lmacken@redhat.com> - 0.2.7
+- Remove TYPE_{INTERFACE,INTERACTIVE}
+
 * Oct 23 2006 Luke Macken <lmacken@redhat.com> - 0.2.6
 - Make the instructions less misleading
 - Support TYPE_INTERFACE for API_VERSION <= 2.3
